--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,3 +141,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -mox-appearance: textfield;
+  appearance: textfield;
+}
